// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationSection /> render() should open the Two-Factor Authentication Modal via Enable or Update button 1`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="ui-badge-badge-7025 ml-3  ui-badge-uppercase-7025"
        style="border-radius: 100px;"
      >
        2FA Enabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      aria-disabled="false"
      class="wrapper mr-2 fill secondary medium"
      type="button"
    >
      <span
        class="content"
      >
        Update 2FA
      </span>
    </button>
    <button
      aria-disabled="false"
      class="wrapper fill destructive medium"
      type="button"
    >
      <span
        class="content"
      >
        Disable 2FA
      </span>
    </button>
    <div>
      TwoFactorAuthenticationModal mocked
      <button
        type="button"
      >
        Finish action mocked
      </button>
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationSection /> render() should open the Two-Factor Authentication Modal via Enable or Update button 2`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="ui-badge-badge-7025 ml-3  ui-badge-uppercase-7025"
        style="border-radius: 100px;"
      >
        2FA Disabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      aria-disabled="false"
      class="wrapper mr-2 fill primary medium"
      type="button"
    >
      <span
        class="content"
      >
        Enable 2FA
      </span>
    </button>
    <div>
      TwoFactorAuthenticationModal mocked
      <button
        type="button"
      >
        Finish action mocked
      </button>
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationSection /> render() should render the Two-Factor Authentication Section with status tag 1`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="ui-badge-badge-7025 ml-3  ui-badge-uppercase-7025"
        style="border-radius: 100px;"
      >
        2FA Enabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      aria-disabled="false"
      class="wrapper mr-2 fill secondary medium"
      type="button"
    >
      <span
        class="content"
      >
        Update 2FA
      </span>
    </button>
    <button
      aria-disabled="false"
      class="wrapper fill destructive medium"
      type="button"
    >
      <span
        class="content"
      >
        Disable 2FA
      </span>
    </button>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationSection /> render() should render the Two-Factor Authentication Section with status tag 2`] = `
<body>
  <div>
    <div
      class="heading-subsection-semibold mb16"
    >
      Two-Factor Authentication (2FA)
      <div
        class="ui-badge-badge-7025 ml-3  ui-badge-uppercase-7025"
        style="border-radius: 100px;"
      >
        2FA Disabled
      </div>
    </div>
    <div
      class="body-regular mb16"
    >
      For an added layer of security, enable Two-Factor Authentication for your Gorgias login.
    </div>
    <button
      aria-disabled="false"
      class="wrapper mr-2 fill primary medium"
      type="button"
    >
      <span
        class="content"
      >
        Enable 2FA
      </span>
    </button>
  </div>
</body>
`;
